--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -138,7 +138,7 @@ canvas
 
 	// personaje
 	>div:nth-of-type(1)
-		+out
+		
 		margin-bottom: $spacer
 		img
 			width: 100%
@@ -166,7 +166,7 @@ canvas
 		+g3
 		+omega
 		text-align: right
-		margin-bottom: 6px
+		
 
 		a:last-of-type
 			margin-left: 10px
@@ -186,7 +186,6 @@ canvas
 
 	// personaje
 	>div:nth-of-type(1)
-		+out
 		margin-bottom: $spacer
 		img
 			width: 100%
@@ -200,6 +199,7 @@ canvas
 		
 		+omega
 		text-align: right
+		margin-bottom: 6px
 
 		a:last-of-type
 			margin-left: 10px
@@ -260,7 +260,7 @@ canvas
 
 
 a.itemAction
-	+out
+	
 	width: 100%
 	min-height: 93px
 	display: block
@@ -313,6 +313,7 @@ a.itemAction
 	>a
 		+tab
 		+g2
+		width: 168px
 
 	>a:first-of-type
 		+alpha
