test fb profile pic more chica eseeee

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -251,12 +251,13 @@ canvas
 		top: 0
 		+box-shadow(rgba(black,0.2) 0px 2px 3px)
 
-		
 		a
 			display: block
 
 			img
 				display: block
+				height: 30px
+				width: 30px
 
 
 a.itemAction
