wtf, pensé que ya había mandado esos cambios :S

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -520,5 +520,50 @@ a.selectedTab
 
 	
 
+#wraper
+	margin: 10px auto
+	text-align: center
+	width: 1002px
+
+#overlay
+	background: black
+	bottom: 0
+	left: 0
+	opacity: 0.5
+	position: fixed
+	right: 0
+	top: 0
+	z-index: 100
+
+#popup
+	+border-radius(30px)
+	background: none repeat scroll 0 0 white
+	border: 20px solid #ddd
+	left: 31%
+	padding: 50px
+	position: fixed
+	text-align: center
+	top: 28%
+	width: 380px
+	z-index: 200
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
