--- a/css/styles.css
+++ b/css/styles.css
@@ -1854,7 +1854,8 @@ a.selectedTab:hover {
   margin-right: 5px;
 }
 #comentarios div span {
-  font-size: 2em;
+  font-size: 2.3em;
+  color: #ebc101;
 }
 #comentarios form {
   margin-bottom: 20px;
