--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -413,7 +413,8 @@ a.selectedTab
 		img
 			margin-right: $spacer/2
 		span
-			font-size: 2em
+			font-size: 2.3em
+			color: $fondo
 
 	form
 		margin-bottom: $spacer*2
