cam, views, tooltips, rounded :)

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -576,7 +576,7 @@ a.selectedTab
 
 
 .lb
-	background: rgba(black,0.5)
+	//background: rgba(black,0.7)
 	color: white
 
 	// cerrar
@@ -671,8 +671,20 @@ a.selectedTab
 #cam
 	width: 420px
 	margin: 0 auto
+	text-align: center
+
+#camaradiv
+
+
+#camControls
+	margin-top: $spacer
+
+	a
+		padding-top: $spacer
+		display: block
 
 #upload_results
+	text-align: center
 
 	p
 		font-size: 0.9em
@@ -681,6 +693,7 @@ a.selectedTab
 
 	img
 		display: block
+		margin: 0 auto
 		margin-bottom: $spacer
 
 
