--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -576,7 +576,7 @@ a.selectedTab
 
 
 .lb
-	//background: rgba(black,0.7)
+	background: none
 	color: white
 
 	// cerrar
@@ -724,3 +724,10 @@ a.selectedTab
 	top: 28%
 	width: 380px
 	z-index: 200
+
+
+.jcrop-holder
+	margin: 0 auto
+	margin-bottom: $spacer
+
+
