--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -359,6 +359,7 @@ canvas
 	img
 		width: 100%
 		vertical-align: bottom
+		max-height: 168px
 	&:hover
 		+box-shadow(rgba(black,0.2) 0px 2px 10px)
 		cursor: pointer
