--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -346,6 +346,27 @@ canvas
 		+box-shadow(rgba(black,0.2) 0px 2px 10px)
 		cursor: pointer
 
+	// fb avatar
+	div
+		position: absolute
+		top: 5px
+		left: 5px
+		
+		a
+			display: block
+
+			img
+				+fx
+				display: block
+				width: 35px
+				height: 35px
+				+border-radius(40px)
+				+box-shadow(rgba(black,0.2) 0px 2px 3px)
+
+		&:hover
+			img
+				+border-radius(0px)
+
 
 .itemThumbnail
 	+g2
@@ -359,7 +380,7 @@ canvas
 	img
 		width: 100%
 		vertical-align: bottom
-		
+
 	&:hover
 		+box-shadow(rgba(black,0.2) 0px 2px 10px)
 		cursor: pointer
