--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -1,86 +1,85 @@
 // 960.gs port
 
-
 @mixin cf
 	clear: both
 
 	&:after, &:before
-		content: " "
+		content: ''
 		display: table
 
 	&:after
 		clear: both
 
-@mixin container
+%container
 	margin: 0 auto
-	width: 810px
+	width: 780px
 	+cf
+	//outline: 1px dotted red
 
-
-.grid-settings
+%grid-settings
 	display: inline
 	float: left
 	margin-left: 5px
 	margin-right: 5px
-	// outline: 1px dotted red
+	//outline: 1px dotted red
 
 
-@mixin g1
-	@extend .grid-settings
-	width: 57px
+%g1
+	@extend %grid-settings
+	width: 55px
 
-@mixin g2
-	@extend .grid-settings
-	width: 124px
+%g2
+	@extend %grid-settings
+	width: 120px
 
-@mixin g3
-	@extend .grid-settings
-	width: 191px
+%g3
+	@extend %grid-settings
+	width: 185px
 
-@mixin g4
-	@extend .grid-settings
-	width: 258px
+%g4
+	@extend %grid-settings
+	width: 250px
 
-@mixin g5
-	@extend .grid-settings
-	width: 325px
+%g5
+	@extend %grid-settings
+	width: 315px
 
-@mixin g6
-	@extend .grid-settings
-	width: 392px
+%g6
+	@extend %grid-settings
+	width: 380px
 
-@mixin g7
-	@extend .grid-settings
-	width: 459px
+%g7
+	@extend %grid-settings
+	width: 445px
 
-@mixin g8
-	@extend .grid-settings
-	width: 526px
+%g8
+	@extend %grid-settings
+	width: 510px
 
-@mixin g9
-	@extend .grid-settings
-	width: 593px
+%g9
+	@extend %grid-settings
+	width: 575px
 
-@mixin g10
-	@extend .grid-settings
-	width: 660px
+%g10
+	@extend %grid-settings
+	width: 640px
 
-@mixin g11
-	@extend .grid-settings
-	width: 727px
+%g11
+	@extend %grid-settings
+	width: 705px
 
-@mixin g12
-	@extend .grid-settings
-	width: 794px
+%g12
+	@extend %grid-settings
+	width: 770px
 
 
 
-@mixin alpha
+%alpha
 	margin-left: 0
 
-@mixin omega
+%omega
 	margin-right: 0
 
-@mixin alphaomega
+%alphaomega
 	margin-left: 0
 	margin-right: 0
