--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -46,7 +46,7 @@ body
 	font-family: Helvetica
 	font-size: 16px
 	background-color: $fondo
-	padding: 10px
+	padding-bottom: 45px
 
 	border: 8px solid $primario
 
