--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -46,7 +46,7 @@ body
 	font-family: Helvetica
 	font-size: 16px
 	background-color: $fondo
-	padding-bottom: 35px
+	padding: 30px 0 30px 0
 
 	border: 8px solid $primario
 
