--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -664,7 +664,7 @@ a.selectedTab
 
 	// contenedor de la pic
 	div:nth-of-type(1)
-		+background-image(radial-gradient(300px 300px, #fef200 0px, #efca00 500px))
+		//+background-image(radial-gradient(300px 300px, #fef200 0px, #efca00 500px))
 		margin-bottom: $spacer*2
 		img
 			width: 100%
